--- a/packages/pluggableWidgets/custom-chart-web/src/ui/CustomChart.scss
+++ b/packages/pluggableWidgets/custom-chart-web/src/ui/CustomChart.scss
@@ -1,4 +1,13 @@
 .widget-custom-chart {
-    width: 100%;
-    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    .svg-container {
+        .main-svg {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    }
 }
