chore: finalize refresh

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -459,7 +459,7 @@ $root: ".widget-datagrid";
     }
 
     &-skeleton {
-        padding: 2px var(--dropdown-outer-padding, 10px);
+        padding: 2px var(--dropdown-outer-padding, 0);
 
         &-loader {
             animation: skeleton-loading 1s linear infinite alternate;
