--- a/packages/pluggableWidgets/rich-text-web/src/utils/formats/quill-table-better/assets/css/quill-table-better.scss
+++ b/packages/pluggableWidgets/rich-text-web/src/utils/formats/quill-table-better/assets/css/quill-table-better.scss
@@ -280,11 +280,12 @@ $focused-border: 1px solid $focused-border-color;
     }
 }
 .ql-table-properties-form {
-    width: 320px;
-    position: absolute;
-    left: 50%;
-    padding-bottom: 8px;
     background: $color-white;
+    padding-bottom: 8px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 320px;
     z-index: 1;
     @include boxShadow($color-ccced1);
     .properties-form-header {
